--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT = 8080
+
+
+MONGO_USER = juanfernandojfc
+MONGO_PASS = cardonas97
+MONGO_API = mongodb+srv://MONGO_USER:MONGO_PASS@cluster-node.mjcmukf.mongodb.net/?retryWrites=true&w=majority
